<resources>
    <string name="app_name">AIRA</string>
    <string name="create_identity_test">Create a new identity:</string>
    <string name="identity_name">Identity Name</string>
    <string name="password_hint">Password</string>
    <string name="password_confirm_hint">Password (confirm)</string>
    <string name="create">Create</string>
    <string name="password_mismatch">Passwords don\'t match !</string>
    <string name="online_peers">Online peers:</string>
    <string name="offline_contacts">Offline contacts:</string>
    <string name="identity_create_failed">Failed to create identity</string>
    <string name="identity_load_failed">Failed to load identity. Please check your password</string>
    <string name="service_name">AIRA Background Service</string>
    <string name="login">Login</string>
    <string name="add_peer_ip">Add peer by IP</string>
    <string name="unknown">Unknown</string>
    <string name="file_saved">File saved to %s !</string>
    <string name="enter_password">Enter your password:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="warning">Warning !</string>
    <string name="ask_log_out">Do you really want to log out ? (You will no longer receive messages until you login again)</string>
    <string name="cancel">Cancel</string>
    <string name="background_service">Background service</string>
    <string name="verifying_contact">Verifying contact</string>
    <string name="fingerprints_instructions">Compare the following fingerprints by a trusted way of communication (such as real life) and be sure they match..</string>
    <string name="local_fingerprint">Local fingerprint:</string>
    <string name="peer_fingerprint">Peer fingerprint:</string>
    <string name="summary_name">The name of your identity. Shown to all active sessions.</string>
    <string name="delete_identity">Delete Identity</string>
    <string name="summary_delete_identity">Delete all your data. You won\'t be able to be recognized by your contacts anymore.</string>
    <string name="preference_password">Identity Password</string>
    <string name="summary_password">You can\'t access your data or be recognized by your contacts without this password.</string>
    <string name="change_password">Change password:</string>
    <string name="ok">OK</string>
    <string name="change_password_failed">Operation failed. Please check your old password.</string>
    <string name="error">Error</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password (empty for no password)</string>
    <string name="new_password_confirm">New password (confirm)</string>
    <string name="confirm_delete">Are you sure you want to delete all your conversations (messages and files), all your contacts, and your private key ?</string>
    <string name="they_match">They match</string>
    <string name="ask_delete_conversation">Deleting a conversation only affects you. Your contact will still have a copy of this conversation if she/he doesn\'t delete it too. Do you really want to delete all this conversation (messages and files) ?</string>
    <string name="delete">Delete</string>
    <string name="ask_remove_contact">Deleting contact will remove her/his identity key and your conversation (messages and files). You won\'t be able to recognize her/him anymore. This action only affects you. Do you really want to remove this contact ?</string>
    <string name="ask_remove_contacts">Deleting contacts will remove their identity keys and your conversations (messages and files). You won\'t be able to recognize them anymore. This action only affects you. Do you really want to remove these contacts ?</string>
    <string name="enable_password">Encrypt with a password</string>
    <string name="msg_notification_channel_name">New Messages</string>
    <string name="mark_read">Mark read</string>
    <string name="ask_file_notification_channel">Download file requests</string>
    <string name="db_mkdir_failed">Databases directory creation failed</string>
    <string name="want_to_send_files">%s wants to send you some files</string>
    <string name="download_file_request">Download file request</string>
    <string name="download">Download</string>
    <string name="refuse">Refuse</string>
    <string name="file_transfers">File transfers</string>
    <string name="transfer_aborted">Transfer aborted</string>
    <string name="transfer_completed">Transfer completed</string>
    <string name="reply">Reply</string>
    <string name="open_uri_failed">Failed to open URI</string>
    <string name="ask_send_single_file">Send %s (%s) to %s ?</string>
    <string name="ask_send_multiple_files">Send %d files to %s ?</string>
    <string name="share_label">Send with AIRA</string>
    <string name="identity_fingerprint">Your identity\'s fingerprint:</string>
    <string name="fingerprint">Fingerprint:</string>
    <string name="peer_ip">Peer IP:</string>
    <string name="connection">Connection:</string>
    <string name="outgoing">Outgoing</string>
    <string name="incoming">Incoming</string>
    <string name="delete_conversation">Delete conversation</string>
    <string name="verify">Verify</string>
    <string name="add_contact">Add contact</string>
    <string name="remove_contact">Remove contact</string>
    <string name="details">Details</string>
    <string name="your_addresses">Your IP addresses:</string>
    <string name="file_transfer_already_in_progress">Another file transfer is already in progress</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="copied">Copied to clipboard !</string>
    <string name="identity">Identity</string>
    <string name="about">About</string>
    <string name="version">AIRA version</string>
    <string name="refresh_profile">Refresh profile</string>
    <string name="security">Security</string>
    <string name="use_psec_padding">Use PSEC padding</string>
    <string name="psec_padding_summary">PSEC padding obfuscates the length of your messages but uses more network bandwidth.</string>
    <string name="is_contact">Is contact:</string>
    <string name="is_verified">Is verified:</string>
    <string name="avatar_too_large">Avatar cannot be larger than 10MB.</string>
    <string name="your_avatar">Your avatar:</string>
    <string name="set_a_new_one">Set a new one</string>
    <string name="remove">Remove</string>
    <string name="choose_avatar">Choose avatar</string>
    <string name="message_hint">Send a message…</string>
    <string name="no_name_error">This session has no name !</string>
    <string name="invalid_ip">Invalid IP address</string>
    <string name="unable_to_connect_to">Unable to connect to %s</string>
    <string name="github">GitHub</string>
    <string name="github_summary">AIRA-android repository on GitHub.</string>
    <string name="gitea">Gitea</string>
    <string name="gitea_summary">AIRA-android repository on the Gitea instance of the Chapril project. Unlike GitHub, Gitea is fully free software and self-hosted.</string>
    <string name="offline_warning_title">Your contact seems to be offline.</string>
    <string name="offline_warning_msg">Sent messages will be stored until a connection is established.</string>
    <string name="pending_messages">Pending messages:</string>
    <string name="sending_pending_messages">Sending pending messages…</string>
    <string name="stop">Stop</string>
    <string name="app">App</string>
    <string name="start_at_boot">Start AIRA service at boot</string>
    <string name="start_at_boot_summary">If disabled, you won\'t receive messages until you open the app manually.</string>
    <string name="start_at_boot_summary_identity_protected">Only available if identity is not protected by a password.</string>

    <!--accessibility strings-->
    <string name="send_file">Send file</string>
    <string name="trust_level_indicator">Trust level indicator</string>
    <string name="send_message">Send message</string>
    <string name="show_your_ips">Show your IPs</string>
    <string name="clickable_indicator">Clickable indicator</string>
    <string name="avatar">Avatar</string>
    <string name="name">Name</string>
    <string name="warning_desc">Warning icon</string>
</resources>