<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/delete_conversation"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_delete_conversation"
        android:title="@string/delete_conversation" />

    <item
        android:id="@+id/verify"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_verified"
        android:title="@string/verify"/>

    <item
        android:id="@+id/set_as_contact"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_person_add"
        android:title="@string/add_contact"/>

    <item
        android:id="@+id/remove_contact"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_person_remove"
        android:title="@string/remove_contact"/>

    <item
        android:id="@+id/session_info"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_info"
        android:title="@string/details"/>

    <item
        android:id="@+id/refresh_profile"
        app:showAsAction="never"
        android:title="@string/refresh_profile"/>

</menu>