<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ChatActivity">

    <include layout="@layout/profile_toolbar" android:id="@+id/toolbar"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_chat"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@id/offline_warning"/>

    <LinearLayout
        android:id="@+id/sending_pending_msgs_indicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/recycler_chat"
        app:layout_constraintBottom_toTopOf="@id/bottom_panel"
        android:visibility="gone"
        android:gravity="center"
        android:paddingVertical="10dp"
        android:background="@drawable/sending_pending_msg_indictor_background">

        <ProgressBar
            android:layout_width="50dp"
            android:layout_height="50dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sending_pending_messages"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/offline_warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/recycler_chat"
        app:layout_constraintBottom_toTopOf="@id/bottom_panel"
        android:visibility="gone"
        android:paddingHorizontal="30dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/offline_warning_background">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_warning"
            app:tint="@color/offline_warning"
            android:contentDescription="@string/warning_desc"
            android:layout_gravity="center_vertical"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/offline_warning_title"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/offline_warning_msg"
                android:textColor="#80ffffff"/>

        </LinearLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingVertical="5dp"
        android:background="@color/primary">

        <ImageButton
            android:id="@+id/button_attach"
            android:layout_width="@dimen/image_button_size"
            android:layout_height="@dimen/image_button_size"
            android:src="@drawable/ic_attach_file"
            style="@style/ImageButton"
            android:contentDescription="@string/send_file"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/bottom_image_trust_level"/>

        <ImageView
            android:id="@+id/bottom_image_trust_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/trust_level_indicator"
            android:layout_marginEnd="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_attach"
            app:layout_constraintEnd_toStartOf="@id/edit_message"/>

        <EditText
            android:id="@+id/edit_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/message_hint"
            android:autofillHints="message"
            style="@style/EditText"
            android:inputType="textMultiLine|textShortMessage|textAutoCorrect|textCapSentences"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/bottom_image_trust_level"
            app:layout_constraintEnd_toStartOf="@+id/button_send"/>

        <ImageButton
            android:id="@+id/button_send"
            android:layout_width="@dimen/image_button_size"
            android:layout_height="@dimen/image_button_size"
            android:src="@drawable/ic_send"
            style="@style/ImageButton"
            android:contentDescription="@string/send_message"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/edit_message"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>